fix dockerfile and jar name