@@ -1,14 +1,11 @@
-FROM gradle:jdk21 as builder
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
+FROM gcr.io/distroless/java17-debian12:nonroot
 
-FROM eclipse-temurin:latest
+LABEL org.opencontainers.image.authors="teampartner@entur.org"
+EXPOSE 9010
 
-EXPOSE 8080
+COPY build/libs/entur-game-backend-*.jar /app/entur-game-backend.jar
+COPY src/main/kubernetes/ /config
 
-RUN mkdir /app
+WORKDIR /app
+CMD ["entur-game-backend.jar"]
 
-COPY --from=builder /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
